--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,12 @@
   font-family: spoqaHanSansNeo;
   list-style: none;
 }
+button {
+  border: none;
+}
+button:focus {
+  outline: none;
+}
 .static-nav {
   width: 100%;
   padding: 1.25rem 5rem;
@@ -424,8 +430,24 @@ h1 {
 .card-box {
   position: relative;
   text-align: center;
+  width: 200px;
 }
-
+.plus {
+  position: absolute;
+  top: 7px;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 2rem;
+  border: none;
+  border-radius: 50%;
+  background-color: var(--white);
+  color: var(--green);
+}
+.plus:focus {
+  outline: none;
+}
 .card-box img {
   width: 12.75rem;
   height: 16.625rem;
@@ -526,7 +548,7 @@ h1 {
   font-weight: 500;
   letter-spacing: 0.87px;
 }
-.modal-folder .bold {
+.modal-folder .highlight {
   background-color: var(--light-cyan);
 }
 .modal-folder p {
@@ -588,6 +610,111 @@ h1 {
   color: var(--white);
   border-radius: 3px;
 }
-
+/* place info */
+.modal-img-container {
+  position: fixed;
+  top: 0;
+  height: 130%;
+  width: 100vw;
+  background-color: var(--dimmer-1);
+  z-index: 20;
+}
+.modal-img {
+  position: relative;
+  margin: 5rem auto;
+  padding: 2.7rem;
+  width: 80%;
+  height: 40rem;
+  background-color: white;
+}
+.modal-img .close {
+  position: absolute;
+  top: 20px;
+  right: 15px;
+  width: 1rem;
+  height: 1rem;
+}
+.modal-img .close:hover {
+  cursor: pointer;
+  outline: none;
+}
+.info-box-container {
+  display: flex;
+}
+.info-box {
+  position: relative;
+  width: 50%;
+  height: 400px;
+  margin-right: 1rem;
+}
+.info-box > button {
+  position: absolute;
+  top: 16.5rem;
+  right: 0;
+  border: none;
+  color: var(--coral);
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+.info-box img {
+  width: 100%;
+  height: 250px;
+}
+.info-box h4 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-top: 0.625rem;
+}
+.info-box p {
+  width: 90%;
+  height: 100px;
+  margin-top: 0.625rem;
+}
+.place-box-container {
+  width: 100%;
+  height: 150px;
+  margin: 20px auto;
+  padding-top: 10px;
+  display: flex;
+  overflow-x: scroll;
+}
+.place-box-container .place-box {
+  position: relative;
+  margin-right: 10px;
+}
+.place-box-container .place-box img {
+  width: 6.25rem;
+}
+.place-box-container .place-box button {
+  position: absolute;
+  top: -10px;
+  right: -3px;
+  border-radius: 50%;
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  color: var(--green);
+  background-color: var(--white);
+  z-index: 5;
+}
+.place-box-container .place-box p {
+  position: absolute;
+  bottom: 24px;
+  width: 100%;
+  font-size: 0.75rem;
+  text-align: center;
+  color: var(--white);
+  background-color: rgba(92, 92, 92, 0.4);
+}
+.place-box-container > button:first-child {
+  position: absolute;
+  left: 10px;
+  bottom: 6.5rem;
+  background-color: var(--white);
+}
+.place-box-container > button:nth-child(2) {
+  position: absolute;
+  right: 10px;
+  bottom: 6.5rem;
+  background-color: var(--white);
+}
 /* font */
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
